# OpenCV_Projects

OpenCV_C++_Project/Image_read_approach/: Project9.sln
OpenCV_C++_Project/Image_read_approach/Project9/: OpenCV_Release_x64.props  Project9.vcxproj  main.cpp
OpenCV_C++_Project/Image_read_approach/Project9/x64/Release/: Project9.exe.recipe  Project9.iobj  Project9.ipdb
OpenCV_C++_Project/Image_read_approach/Project9/x64/Release/Project9.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Project9.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/: CMakeLists.txt
src/src/: feature.cpp
